<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.epam</groupId>
        <artifactId>jatstartup</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>jat-start-up-ui</artifactId>

    <properties>
        <nodejs.downloadroot>https://nodejs.org/dist/</nodejs.downloadroot>
        <npm.version>8.5.5</npm.version>
        <nodejs.version>v16.15.0</nodejs.version>
        <npm.downloadroot>http://registry.npmjs.org/npm/-/</npm.downloadroot>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <version>1.11.0</version>
                <executions>
                    <execution>
                        <id>install node and npm</id>
                        <goals>
                            <goal>install-node-and-npm</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <npmVersion>${npm.version}</npmVersion>
                            <npmDownloadRoot>${npm.downloadroot}</npmDownloadRoot>
                            <nodeVersion>${nodejs.version}</nodeVersion>
                            <nodeDownloadRoot>${nodejs.downloadroot}</nodeDownloadRoot>
                        </configuration>
                    </execution>
                    <execution>
                        <id>npm install</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>npm run build:dist</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>